<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".RecognizeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/loading"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:elevation="10dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/imagePreview"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:background="@drawable/myrect"
            android:src="@drawable/test"
            android:layout_height="300dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/recognize_as"
            android:id="@+id/tvLoading"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_width="42dp"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_marginTop="12dp"
            android:layout_height="42dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/absParent"
            android:animateLayoutChanges="true"
            android:layout_marginTop="12dp"
            android:layout_height="80dp">
            <Button
                android:layout_width="wrap_content"
                android:background="@drawable/btn_action"
                android:textColor="@color/colotTextHighContrast"
                android:text="@string/cyril"
                android:paddingLeft="12dp"
                android:layout_marginBottom="12dp"
                android:paddingRight="12dp"
                android:id="@+id/btnKiril"
                android:drawablePadding="8dp"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="wrap_content"
                android:background="@drawable/btn_action"
                android:layout_marginLeft="12dp"
                android:padding="12dp"
                android:id="@+id/btnLatin"
                android:textColor="@color/colotTextHighContrast"
                android:text="@string/latin"
                android:layout_marginBottom="12dp"
                android:drawablePadding="8dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/mainScroll"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:elevation="10dp"
                    android:scaleType="fitXY"
                    android:foreground="@drawable/btn_t"
                    android:clickable="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:id="@+id/ivRecognized"
                    android:layout_marginBottom="24dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/myrect"
                    android:src="@drawable/test"
                    android:layout_height="300dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_height="80dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:background="@drawable/btn_action"
                        android:textColor="@color/colotTextHighContrast"
                        android:text="@string/save"
                        android:paddingLeft="12dp"
                        android:layout_marginBottom="12dp"
                        android:paddingRight="12dp"
                        android:id="@+id/btnSave"
                        android:drawableLeft="@drawable/ic_save"
                        android:drawablePadding="8dp"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:background="@drawable/btn_action"
                        android:drawableStart="@drawable/ic_share"
                        android:layout_marginLeft="12dp"
                        android:padding="12dp"
                        android:id="@+id/btnShare"
                        android:textColor="@color/colotTextHighContrast"
                        android:text="@string/share"
                        android:layout_marginBottom="12dp"
                        android:drawablePadding="8dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/recognized_text"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardCornerRadius="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="24dp"
                    app:cardBackgroundColor="@color/colorAccentLight"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="12dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:text="Рассрознанный текст:"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp"
                            android:id="@+id/tvText"
                            android:layout_marginRight="12dp"
                            android:layout_marginBottom="24dp"
                            android:textSize="18dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>