<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWelcome"
    android:animateLayoutChanges="true"
    android:id="@+id/mainPage"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/illustration"
        android:scaleType="fitStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/welcome_illustration"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/welcomle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/tvWelcome"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/mainScroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/mainList"
                android:paddingBottom="12dp"
                android:paddingTop="8dp"
                android:clipToPadding="true"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomActionBar"
        android:layout_marginBottom="8dp"
        android:text="@string/instruction"
        android:id="@+id/instruction"
        android:gravity="center"
        android:paddingLeft="24dp"
        android:drawablePadding="4dp"
        android:paddingRight="24dp"
        android:drawableBottom="@drawable/ic_double_down"
        android:textSize="18dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/bottomActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            app:cardCornerRadius="30dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="12dp"
                android:orientation="horizontal"
                android:weightSum="7"
                android:gravity="center"
                android:id="@+id/btnChange"
                android:clickable="true"
                android:background="@drawable/btn_white"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:src="@drawable/braille_z_black"
                        android:layout_marginRight="4dp"
                        android:layout_marginLeft="4dp"
                        android:id="@+id/ivLeft"
                        android:layout_height="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/braille"
                        android:textSize="14dp"
                        android:id="@+id/tvLeft"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:src="@drawable/data_transfer"
                    android:layout_height="26dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:gravity="center_vertical|right"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/text"
                        android:id="@+id/tvRight"
                        android:textSize="14dp"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:id="@+id/ivRight"
                        android:src="@drawable/z"
                        android:layout_height="30dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="30dp"
            android:id="@+id/cardAction"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true"
                    android:id="@+id/btnCamera"
                    android:padding="16dp"
                    android:background="@drawable/btn_action"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/c_camera"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/camera"
                        android:layout_marginTop="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colotTextHighContrast"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true"
                    android:id="@+id/btnImport"
                    android:padding="16dp"
                    android:background="@drawable/btn_action"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scanning"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/importImg"
                        android:textSize="16dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/colotTextHighContrast"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:clickable="true"
                    android:id="@+id/btnKeyboard"
                    android:padding="16dp"
                    android:background="@drawable/btn_action"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="30dp"
                        android:id="@+id/ivKeyboard"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_braille"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/keyboard"
                        android:textSize="16dp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/colotTextHighContrast"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colotTextHighContrast"
        android:id="@+id/loading"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:elevation="10dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:id="@+id/imagePreview"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:adjustViewBounds="true"
            android:background="@drawable/myrect"
            android:src="@drawable/test"
            android:layout_height="300dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="Подождите..."
            android:id="@+id/tvLoading"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:layout_width="42dp"
            android:id="@+id/progressBar"
            android:visibility="visible"
            android:layout_marginTop="12dp"
            android:layout_height="42dp"/>

        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/btn_action"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:id="@+id/btnCancel"
            android:textColor="@color/colotTextHighContrast"
            android:text="@string/cancel"
            android:layout_marginBottom="12dp"
            android:drawablePadding="8dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>